applets: react to power-profile-daemon dbus registration

Made tlpInstalled a bindable property as it can change now.

BUG: 492859